<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_settings_scene"
    tools:context=".ui.SettingsFragment"
    tools:ignore="MissingConstraints"
    tools:showPaths="true">

    <TextView
        android:id="@+id/settings_title_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/select_theme"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/settings_chip_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/settings_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:chipSpacingHorizontal="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title_themes"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_chip_space_theme"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark_space" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_chip_mars_theme"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_desert_of_mars" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/settings_title_pod_hd"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="20dp"
        android:text="@string/load_photos_in_hd_resolution"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_chip_group" />

    <com.google.android.material.chip.Chip
        android:id="@+id/settings_chip_hd"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_photos_in_hd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title_pod_hd" />

</androidx.constraintlayout.motion.widget.MotionLayout>